@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19910716
+MANIFEST for ded, version t19910717
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 Makefile                        top-level makefile for unix directory editor
